libs/toolkit-contract-macros-tests/tests/ui/fail/proto_bridge_enum_with_payload.stderr
error: ProtoBridge enum variants must be unit (no payload)
  --> tests/ui/fail/proto_bridge_enum_with_payload.rs:17:5
   |
17 |     Completed(i64),
   |     ^^^^^^^^^
